package homework3.mygui;

import java.awt.*;

public interface Shape {
    void draw(Graphics g);
}
